--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,12 @@ body {
 }
 .characters {
   padding-top: 50px;
-  padding-left: 100px;
+  padding-left: 200px;
 
   width: 500px;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .characters__title {
@@ -38,69 +39,88 @@ body {
   font-size: 32px;
 }
 
-.btn {
+.characters__btn {
+  margin-top: 65px;
+
+  text-align: center;
 }
+
+.btn:disabled {
+  background-color: #c5d11b;
+  cursor: default;
+}
+
+.btn:disabled:hover,
+.btn:disabled:focus {
+  background-color: #f00;
+}
+
+.btn {
+  padding: 7px 15px;
+  margin-left: 10px;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  background-color: rgb(245, 245, 43);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+.btn:hover,
+.btn:focus {
+  background-color: rgb(7, 221, 7);
+}
+
 /* ---------------------------------------- */
 #characters-list {
   list-style: none;
-  margin-top: 20px;
+  margin-top: 65px;
   text-align: center;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   width: 699px;
   gap: 1.25rem;
 }
 
 #characters-list li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100px;
   height: 100px;
-  padding: 10px;
-  /* margin-bottom: 5px; */
+  padding: 5px;
+
   background-color: transparent;
-  border: 1px solid #ccc;
+  border: 1px solid #faf605;
   border-radius: 5px;
 
   cursor: pointer;
   color: #fbfc48;
+  transition: all 0.5s ease;
+  box-shadow: 0px 0px 35px 13px rgba(250, 246, 5, 1);
 }
 
 #characters-list li:hover {
-  color: rgb(14, 167, 14);
+  /* color: rgb(14, 167, 14); */
   border-color: rgb(7, 221, 7);
-}
-
-#pagination {
-  margin-top: 10px;
-  text-align: center;
-}
-
-#pagination button {
-  margin: 0 10px;
-  padding: 5px 10px;
-  background-color: #f5f5f5;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-#pagination button:hover {
-  background-color: #e5e5e5;
-}
-
-#pagination button:disabled {
-  background-color: #ccc;
-  cursor: default;
+  background-color: rgb(5, 177, 5);
 }
 
 #character-details {
-  width: 80%;
-  margin: 0 auto;
-  margin-top: 20px;
+  padding: 200px 50px 0px;
+
+  width: 100%;
+  height: 100vh;
+  background: url(../img/icon-bg.jpg) 0 0 / cover no-repeat;
 }
 
 #character-details table {
   width: 100%;
   border-collapse: collapse;
+  margin-bottom: 50px;
 }
 
 #character-details th,
@@ -114,18 +134,6 @@ body {
   background-color: #f5f5f5;
 }
 
-#back-to-list-btn {
-  margin-top: 10px;
-  padding: 5px 10px;
-  background-color: #f5f5f5;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-#back-to-list-btn:hover {
-  background-color: #e5e5e5;
-}
 ul {
   list-style: none;
 }
