--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Min res css */
 * {
   margin: 0px;
   padding: 0px;
@@ -7,44 +8,7 @@
 body {
   font-family: "Roboto", sans-serif;
 }
-
-.wrapper {
-  background: url(../img/dart-bg.jpg) 0 0 / cover no-repeat;
-  height: 100vh;
-  text-align: center;
-}
-.characters {
-  padding-top: 50px;
-  padding-left: 200px;
-
-  width: 500px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.characters__title {
-  font-size: 64px;
-}
-
-.characters__title,
-.characters__subtitle {
-  color: #fbfc48;
-  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
-    0 -18px 40px #f00;
-}
-
-.characters__subtitle {
-  margin-top: 10px;
-  font-size: 32px;
-}
-
-.characters__btn {
-  margin-top: 65px;
-
-  text-align: center;
-}
-
+/* Common styles */
 .btn:disabled {
   background-color: #c5d11b;
   cursor: default;
@@ -68,13 +32,47 @@ body {
   transition: all 0.5s ease;
 }
 
-.btn:hover,
-.btn:focus {
+.btn:hover {
   background-color: rgb(7, 221, 7);
 }
 
 /* ---------------------------------------- */
-#characters-list {
+.wrapper {
+  background: url(../img/main-bg.jpg) 0 0 / cover no-repeat;
+  height: 100vh;
+  text-align: center;
+}
+
+.characters {
+  position: relative;
+  padding-top: 50px;
+  padding-left: 200px;
+
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* ---------------------------------------- */
+.characters__title {
+  font-size: 64px;
+}
+
+.characters__title,
+.characters__subtitle {
+  color: #fbfc48;
+  text-shadow: 0 -1px 4px #fff, 0 -2px 10px #ff0, 0 -10px 20px #ff8000,
+    0 -18px 40px #f00;
+}
+
+.characters__subtitle {
+  margin-top: 10px;
+  font-size: 32px;
+}
+
+/* ---------------------------------------- */
+.characters__list {
   list-style: none;
   margin-top: 65px;
   text-align: center;
@@ -103,45 +101,61 @@ body {
   box-shadow: 0px 0px 35px 13px rgba(250, 246, 5, 1);
 }
 
-#characters-list li:hover {
-  /* color: rgb(14, 167, 14); */
+.characters-list li:hover {
   border-color: rgb(7, 221, 7);
   background-color: rgb(5, 177, 5);
 }
 
-#character-details {
+.characters__btn {
+  margin-top: 65px;
+
+  text-align: center;
+}
+
+/* ---------------------------------------- */
+.characters__details {
+  position: absolute;
+  top: 0;
+  left: 0;
   padding: 200px 50px 0px;
 
   width: 100%;
   height: 100vh;
-  background: url(../img/icon-bg.jpg) 0 0 / cover no-repeat;
-}
-
-#character-details table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 50px;
+  transition: all 0.7s linear;
+  transform: translateY(-1000px);
 }
 
 #character-details th,
 #character-details td {
   padding: 5px;
-  border: 1px solid #ccc;
+  border: 2px solid #44443f;
   width: 215px;
 }
 
 #character-details th {
-  background-color: #f5f5f5;
+  padding: 5px;
+  background-color: rgba(245, 245, 245, 0.5);
+}
+
+.characters__table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 50px;
 }
 
 ul {
   list-style: none;
 }
+
 td {
   max-width: 215px;
   max-height: 250px;
   text-align: center;
+  color: rgb(10, 10, 7);
+  background-color: rgba(245, 245, 245, 0.5);
+  font-weight: 700;
 }
+
 td > ul > li {
   padding-top: 10px;
 }
@@ -150,4 +164,3 @@ img {
   width: 100%;
   height: 100%;
 }
-/* ---------------------------------------- */
