--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ body {
   box-shadow: 0px 0px 35px 13px rgba(250, 246, 5, 1);
 }
 
-.characters-list li:hover {
+#characters-list li:hover {
   border-color: rgb(7, 221, 7);
   background-color: rgb(5, 177, 5);
 }
@@ -164,4 +164,16 @@ td > ul > li {
 img {
   width: 100%;
   height: 100%;
+}
+
+/* ---------------------------------------- */
+.copy {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  text-align: center;
+}
+
+.copy__text {
+  color: rgba(185, 182, 10, 0.5);
 }
